--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -6,8 +7,8 @@
     android:layout_height="match_parent"
     android:background="#A08282"
     android:backgroundTint="#A08282"
-    android:padding="40dp"
-    tools:context=".RegisterActivity">
+    android:padding="20dp"
+    tools:context=".fragmentos.Perfil">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -19,14 +20,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/Registro"
+            android:text="@string/PerfilUser"
             android:textColor="#fff"
-            android:textSize="20sp"
+            android:textSize="25sp"
             android:textStyle="bold" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:src="@drawable/perfil" />
@@ -41,29 +42,32 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#A08282"
-                android:hint="@string/celular"
+                android:hint="@string/cellphoneUser"
                 android:inputType="phone" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="#fff">
+            android:textColorHint="#fff"
+            android:layout_marginTop="15dp">
 
             <EditText
                 android:id="@+id/nombre"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="25dp"
                 android:background="#A08282"
-                android:hint="@string/nombre"
+                android:hint="@string/nameUser"
                 android:inputType="textCapWords|textAutoCorrect" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColorHint="#fff">
+            android:textColorHint="#fff"
+            android:layout_marginTop="15dp">
 
             <EditText
                 android:id="@+id/apellido"
@@ -71,20 +75,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:background="#A08282"
-                android:hint="@string/apellido"
+                android:hint="@string/lastNameuser"
                 android:inputType="textCapWords|textAutoCorrect" />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="@string/Registro"
-            android:onClick="Registrar"
+            android:layout_marginTop="45dp"
+            android:text="@string/guardar"
             android:textColor="#fff"
-
-            android:textColorHint="@color/black" />
+            android:background="@color/black" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
