--- a/app/src/main/res/layout/activity_sesion.xml
+++ b/app/src/main/res/layout/activity_sesion.xml
@@ -20,21 +20,27 @@
             android:layout_height="250dp"
             android:src="@drawable/logovecinal" />
 
-        <Button
-            android:id="@+id/InicioSesion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:text="@string/sesion"
-            android:onClick="Sesion"/>
 
-        <Button
-            android:id="@+id/Registrar"
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/sign_in_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:onClick="Registrar"
-            android:text="@string/registrar" />
+        />
+<!--        <Button-->
+<!--            android:id="@+id/InicioSesion"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:text="@string/sesion"-->
+<!--            android:onClick="Sesion"/>-->
+
+<!--        <Button-->
+<!--            android:id="@+id/Registrar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:onClick="Registrar"-->
+<!--            android:text="@string/registrar" />-->
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
