Subiendo validacion y verificacion de numero

--- a/app/src/main/res/layout/activity_message_alerta.xml
+++ b/app/src/main/res/layout/activity_message_alerta.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/background"
     tools:context=".MessageAlerta">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,12 +17,13 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:gravity="center"
             android:text="@string/messageAlerta"
             android:textColor="#fff"
-            android:textStyle="bold"
-            android:layout_marginTop="15dp"
-            android:textSize="40sp"/>
+            android:textSize="40sp"
+            android:textStyle="bold" />
+
         <com.airbnb.lottie.LottieAnimationView
             android:layout_width="match_parent"
             android:layout_height="150dp"
@@ -31,42 +33,44 @@
             app:lottie_fileName="alert.json"
             app:lottie_imageAssetsFolder="assets"
             app:lottie_loop="true" />
+
         <TextView
             android:id="@+id/user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textStyle="bold"
-            android:text="@string/usuario"
             android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:text="@string/usuario"
             android:textColor="#fff"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textStyle="bold" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/help"
-            android:gravity="center"
-            android:textColor="#fff"
             android:layout_marginTop="5dp"
-            android:textSize="15sp"/>
+            android:gravity="center"
+            android:text="@string/help"
+            android:textColor="#fff"
+            android:textSize="15sp" />
+
         <TextView
             android:layout_width="300dp"
             android:layout_height="50dp"
-            android:gravity="center"
-            android:textColor="#000"
-            android:text="@string/messageAlert"
             android:layout_gravity="center"
             android:layout_marginTop="10dp"
             android:background="@drawable/fondoet"
-            />
+            android:gravity="center"
+            android:text="@string/messageAlert"
+            android:textColor="#000" />
+
         <Button
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@color/black"
             android:layout_marginTop="20dp"
-            android:text="@string/cerrar"/>
-
+            android:background="@color/black"
+            android:text="@string/cerrar" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
