--- a/app/src/main/res/layout/activity_sesion.xml
+++ b/app/src/main/res/layout/activity_sesion.xml
@@ -25,8 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="@string/sesion"
-            android:onClick="Sesion"/>
+            android:onClick="Sesion"
+            android:text="@string/sesion" />
 
         <Button
             android:id="@+id/Registrar"
