Se añadio el token para el servicio FCM y arreglos en los activity

--- a/app/src/main/res/layout/activity_message_alerta.xml
+++ b/app/src/main/res/layout/activity_message_alerta.xml
@@ -70,6 +70,7 @@
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:background="@color/black"
+            android:textColorHint="@color/black"
             android:text="@string/cerrar" />
 
 
