--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -46,6 +46,7 @@
             android:layout_marginTop="15dp">
 
             <EditText
+                android:id="@+id/messagefcm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/message" />
