--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#1CC3E4"/>
+    <solid android:color="#000"/>
     <corners android:radius="8dp"/>
 </shape>
