--- a/app/src/main/res/layout/activity_validar_codigo.xml
+++ b/app/src/main/res/layout/activity_validar_codigo.xml
@@ -190,6 +190,7 @@
                 android:background="@drawable/background_button"
                 android:text="@string/verify"
                 android:textColor="#fff"
+                android:textColorHint="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"/>
             <ProgressBar
