--- a/app/src/main/res/layout/activity_validar_num.xml
+++ b/app/src/main/res/layout/activity_validar_num.xml
@@ -66,7 +66,7 @@
                 android:gravity="center"
                 android:text="@string/_51"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textStyle="bold"/>
             <EditText
                 android:id="@+id/inputMobile"
@@ -77,8 +77,9 @@
                 android:imeOptions="actionDone"
                 android:importantForAutofill="no"
                 android:inputType="number"
+                android:maxLength="9"
                 android:textColor="@color/white"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textStyle="bold"/>
         </LinearLayout>
         <View
